completed the scripting and tweaked some stlying

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <div class="left-side">
             <div class="hangman-container">
-                <div class="bottom"></div>
-                <div class="left"></div>
-                <div class="top"></div>
+                <div class="bottom" id="one"></div>
+                <div class="left" id="2"></div>
+                <div class="top" id="3"></div>
                 <div class="noose"></div>
                 <div class="head"></div>
                 <div class="torso"></div>
@@ -40,7 +40,12 @@
     <div class="phrase"></div>
 
     <div class="choices">
-        
+
+    <div class="gameover">
+        <div>GAME OVER!</div>
+        <button>Start over</button>
+    </div>
+
     </div>
 
 </body>
